Update navbar to toggle in small screen

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
 li {
   list-style: none;
 }
@@ -25,26 +34,39 @@ a {
 
 /* navbar */
 .navbar {
+  position: fixed;
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 2rem 4rem;
+  padding: 2rem 5rem;
+  z-index: 1;
+  background-color: white;
 }
 
 .navbar__menu {
   display: flex;
   justify-content: space-around;
   margin: 0;
+  padding: 0;
 }
 
 .navbar__item {
   padding: 1rem;
 }
 
+.navbar__toggle-btn {
+  position: absolute;
+  right: 3rem;
+  top: 3rem;
+  display: none;
+  font-size: 1rem;
+}
+
 /* introduction */
 .introduction {
   text-align: center;
-  margin-top: 8rem;
-  margin-bottom: 12rem;
+  padding-bottom: 13rem;
+  padding-top: 15rem;
 }
 
 .introduction__title {
@@ -120,4 +142,48 @@ a {
 
 .fab:hover {
   color: grey;
+}
+
+@media screen and (max-width: 64rem) {
+  .projects__list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 48rem) {
+  /* navbar */
+  .navbar {
+    padding: 2rem;
+    flex-direction: column;
+  }
+
+  .navbar__menu {
+    flex-direction: column;
+    display: none;
+  }
+
+  .navbar__menu.open {
+    display: block;
+    height: 100vh;
+    margin-top: 1rem;
+    padding: 15rem 0;
+    font-size: 1.5rem;
+  }
+
+  .navbar__item {
+    text-align: center;
+    margin: 0.7rem;
+  }
+
+  .navbar__toggle-btn {
+    display: block;
+  }
+
+  .navbar__toggle-btn:hover {
+    cursor: pointer;
+  }
+
+  .projects__list {
+    grid-template-columns: 1fr;
+  }
 }
