--- a/public/style.css
+++ b/public/style.css
@@ -51,7 +51,13 @@ a {
 }
 
 .navbar__item {
-  padding: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+
+.navbar__item:hover {
+  cursor: pointer;
+  color: grey;
 }
 
 .navbar__toggle-btn {
@@ -65,7 +71,7 @@ a {
 /* introduction */
 .introduction {
   text-align: center;
-  padding-bottom: 13rem;
+  padding-bottom: 5rem;
   padding-top: 15rem;
 }
 
@@ -83,6 +89,7 @@ a {
 .projects {
   margin: auto;
   text-align: center;
+  padding-top: 7rem;
 }
 
 .projects__msg {
@@ -123,6 +130,7 @@ a {
   display: flex;
   justify-content: space-between;
   margin: 3rem;
+  padding-bottom: 2rem;
 }
 
 .contact__email,
