--- a/style.css
+++ b/style.css
@@ -192,6 +192,10 @@ a {
   }
 
   /* projects */
+  .projects__msg {
+    padding: 0 1rem;
+  }
+
   .projects__list {
     grid-template-columns: 1fr;
   }
